# CurlSample

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/conwin/curlsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ANDROID.crt  ANDROID.key
app/src/main/java/com/conwin/curlsample/: App.java  MainActivity.java  SSLUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/conwin/curlsample/: ExampleUnitTest.java
curl/: CMakeLists.txt  build.gradle
curl/src/androidTest/java/com/conwin/curl/: ExampleInstrumentedTest.java
curl/src/main/: AndroidManifest.xml
curl/src/main/cpp/: curlJni.c
curl/src/main/java/com/conwin/curl/: Curl.java  CurlRequest.java  CurlResponse.java  HttpsRequest.java  Test.java
curl/src/main/java/com/conwin/curl/runnable/: HandlerKit.java  LooperKit.java  LooperKitException.java  SyncRunnable.java
curl/src/main/java/com/lyx/curl/crash/: Crash.java  CrashHandler.java  CrashUtils.java  ExceptionService.java
curl/src/main/java/com/lyx/curl/network/: Curl.java  CurlRequest.java  CurlResponse.java  CurlSDK.java  HttpsRequest.java
curl/src/main/java/com/lyx/curl/runnable/: HandlerKit.java  LooperKit.java  LooperKitException.java  SyncRunnable.java  ThreadPoolManager.java
curl/src/main/java/com/lyx/curl/usage/: Info.java  UsageInfo.java
curl/src/main/res/drawable/: bg_layout_toast.xml
curl/src/main/res/layout/: layout_toast.xml
curl/src/main/res/values/: color.xml  strings.xml
curl/src/test/java/com/conwin/curl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
